Fix page horizontal scroll

--- a/css/campaign.css
+++ b/css/campaign.css
@@ -356,16 +356,19 @@ header dl {
   margin-bottom: 1.5em;
   position: relative;
 }
-.video .cloud {
-  display: block !important;
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: -1;
-  transform: translate(25%, -50%);
-  width: 32vw;
-  height: 16vw;
+@media (min-width: 50em) {
+  .video .cloud {
+    display: block !important;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: -1;
+    transform: translate(25%, -50%);
+    width: 32vw;
+    height: 16vw;
+  }
 }
+
 .video .corner {
   display: block !important;
   position: absolute;
